# rk3588-centernet

./: README.md
onnx/: CMakeLists.txt  ConvertVideo2Images.py  centernet_onnx.py  cmake_install.cmake  demo
onnx/include/: centernet.h  img_preprocess.h  utils.h
onnx/src/: centernet.cpp
onnx/thirdlibrarys/include/onnx190/: cuda11.4.txt
rk3588/: centernet_onnx.py  centernet_to_rknn.py  dataset.txt  main.cpp
rk3588/deployment/: CMakeLists.txt  build_demo.sh
rk3588/deployment/include/: detector_utils.h  moving_object_detector.h
rk3588/deployment/src/: moving_object_detector.cpp
rk3588/deployment/test/: main.cpp
